# tangyuan

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mcp_servers.example.json  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  sync-hf-space.yml
demo_workspace/: ABOUT.md  ARCHITECTURE.md  INSTALL.md  README.md
docs/: ARCHITECTURE.md
examples/rag_demo/: README.md  tangyuan_overview.md  what_is_rag.md
scripts/: setup_hf_space.py
skills/: README.md
tangyuan/: __init__.py  __main__.py  cli.py  config.py  trace.py
tangyuan/agent/: __init__.py  core.py  plan.py  subagent.py  team.py
tangyuan/eval/: __init__.py  assertions.py  cases.py  runner.py
tangyuan/hooks/: __init__.py  base.py  builtin.py
tangyuan/mcp/: __init__.py
tangyuan/mcp/servers/: time_server.py
tangyuan/memory/: __init__.py  history.py  paths.py  store.py  tokens.py
tangyuan/prompts/: SOUL.md  __init__.py  assemble.py  compact.md  distill.md  system.md  system.py  workspace.md
tangyuan/rag/: __init__.py  engine.py
tangyuan/skills/: __init__.py  loader.py
tangyuan/skills/catalog/explain-repo/: SKILL.md
tangyuan/skills/catalog/fix-error/: SKILL.md
tangyuan/skills/catalog/make-pptx/: SKILL.md
tangyuan/tools/: __init__.py  context.py  default.py  fs.py  git.py  message.py  office.py  paths.py  register_fs.py  register_git.py  register_mcp.py  register_memory.py  register_plan.py  register_search.py  register_shell.py  register_subagent.py  register_team.py  register_web.py  registry.py  repomap.py  semantic.py  shell.py  web.py
tangyuan/ui/: __init__.py  render.py  theme.py
tangyuan/web/: __init__.py  __main__.py  app.py  demo_tools.py
tests/: test_demo_tools.py  test_memory_paths.py  test_plan.py  test_rag.py  test_registry.py
